minor media changes

--- a/sass/style/components/_secBrowse.scss
+++ b/sass/style/components/_secBrowse.scss
@@ -1,6 +1,6 @@
 //  use for header background image  //
 .bckimg {
-    background-image: url(/media/images/mainBcakgroundImg.png);
+    background-image: url(../media/images/mainBcakgroundImg.png);
     width: 100%;
     height: 802px;
     background-repeat: no-repeat;
